# drones_simulator

./: .gitignore  build.sh
PythonClient/computer_vision/: marker_spawner_node.py  show_yellow_markers.py
cmake/HelloCar/: Makefile
cmake/rpclib_wrapper/: Makefile
cmake/rpclib_wrapper/rpclib/: Makefile
cmake/rpclib_wrapper/rpclib/cmake/: rpclibTargets.cmake
ros/src/airsim_ros_pkgs/include/: pd_position_controller_simple.h
ros/src/airsim_ros_pkgs/launch/: airsim_all.launch  position_controller_simple.launch
ros/src/airsim_ros_pkgs/scripts/: car_joy  run_all.sh
ros/src/airsim_ros_pkgs/src/: pd_position_controller_simple.cpp
ros/src/drones_controller/: .gitignore  CMakeLists.txt  package.xml
ros/src/drones_controller/config/: markers_positions.csv
ros/src/drones_controller/include/drones_controller/: DronesController.h
ros/src/drones_controller/launch/: drone.launch  four_drones_controller.launch  single_drone_controller.launch  single_drones_controller.launch  six_drones_controller.launch  two_drones_controller.launch
ros/src/drones_controller/msg/: DronePath.msg  DroneWaypoint.msg
ros/src/drones_controller/scripts/: blob_detector_node.py  patrol_referee_node.py  run_algo_with_sim.py  run_the_algo.py  test_drones_paths.py  ticker_node.py
ros/src/drones_controller/scripts/Algo/: Grid.py
ros/src/drones_controller/src/: DronesController.cpp  drones_controller_node.cpp
