<?xml version="1.0"?>
<package>
  <name>drones_controller</name>
  <version>0.1.3</version>
  <description>Safety controller for drones</description>
  <maintainer email="oleg@maksimov.co.il">Oleg Maksimov</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>airsim_ros_pkgs</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>airsim_ros_pkgs</run_depend>
  <!-- <run_depend>dynamic_reconfigure</run_depend> -->
</package>
